--- a/css-zen-garden-abraao-lucas/style.css
+++ b/css-zen-garden-abraao-lucas/style.css
@@ -16,48 +16,70 @@ font-family:'Roboto:wght@100', sans-serif;
 font-size: 95%;
 }
 .page-wrapper{
-text-align: center;
-width: 1000px;
-position: absolute;
-left: 500px;
-float: left;
+    text-align: center;
+    align-items: center;
+    clear: both;
 }
-.page-wrapper .preamble{
-    max-width: 500px;
+#zen-preamble{
+    width: 700px;
     background: #6DEEF8;
-    box-shadow: 0 5px 500px #6DEEF8;
     align-items: center;
     justify-content: space-around;
     padding: 40px 50px;
 }
 #zen-explanation{
+    width: 700px;
     background: #5FD9C0;
-    box-shadow: 0 5px 500px #5FD9C0;
     align-items: center;
     justify-content: space-around;
     padding: 40px 50px;
+    position: absolute;
+    left: 549px;
 }
 #zen-participation{
-    position: absolute;
-    left: 500px;
-    float: left;
+    width: 700px;
     background: #75F0B5;
-    box-shadow: 0 5px 500px #75F0B5;
     align-items: center;
     justify-content: space-around;
     padding: 40px 50px;
+    position: absolute;
+    bottom: -729px;
 }
 #zen-benefits{
+    width: 700px;
     background: #5FD97C;
-    box-shadow: 0 5px 500px #5FD97C;
     align-items: center;
     justify-content: space-around;
     padding: 40px 50px;
+    position: absolute;
+    bottom: -953px;
+    left: 549px;
 }
 #zen-requirements{
+    width: 700px;
     background: #76F86D;
-    box-shadow: 0 5px 500px #76F86D;
     align-items: center;
     justify-content: space-around;
     padding: 40px 50px;
+    position: absolute;
+    bottom: -1458px;
+}
+header{
+    width: 350px;
+    background: #8f8e80;
+    box-shadow: #f5f2d0;
+    align-items: center;
+    padding: 40px 50px;
+    border-radius: 5%;
+}
+#design-selection{
+    float: left;
+    position: absolute;
+    bottom: -1750px;
+    display: block;
+    padding: .5em;
+    border: 1px solid #ba89a8;
+    border-radius: .5em;
+    margin: .25em;
+    width: 80%;
 }
