--- a/css-zen-garden-abraao-lucas/style.css
+++ b/css-zen-garden-abraao-lucas/style.css
@@ -1,85 +1,65 @@
-body{
-background-color:  #f5f2d0;
+@viewport {width:extend-to-zoom; zoom:1.0;}
+html, body {padding:0; margin:0; outline:0; border:0; width:100vw;}
+body {font-size:3vmin; font-family:'Open Sans', arial, sans-serif; font-weight:300; background:#f8f8f8; overflow:hidden; overflow-y:scroll;}
+body * {padding:0; margin:0; outline:0; border:0;}
+
+.wrapper {width:100vw; transition: 1s; position:relative; z-index:10; background:#fff;
+-webkit-transform:translate3d(0vw,0vh,0);
+transform:translate3d(0vw,0vh,0);
 }
-h1{
-font-family: 'Poppins', sans-serif;
-font-size: 300%;
+.footer {background:#329cd2; text-align:center; color:#fff; font-weight:400; padding:4vh 0;}
+.top-panel a {display:block; background:#329cd2; text-align:center; color:#fff; font-weight:400; padding:4vh 0; text-decoration:none;}
+.top-sub-panel {background:#329cd2; text-align:center; color:#fff; font-weight:400; padding:3vh 0;}
+.wrapper p {font-size:2vmin; color:#444; width:60vw; margin:0 auto; text-align:center;}
+.wrapper h4 {text-align:center;}
+h3 {color:#fff; font-weight:300; position:absolute; left:0; top:0; bottom:0; right:0; width:60%; height:50%; margin:auto; text-align:center;}
+h5 {color:#fff; font-weight:300; line-height:2vh; font-size:2vmin;}
+h5 a {color:#fff; text-decoration:none;}
+h5 a:hover {text-decoration:underline;}
+
+#modal-close,
+.action-hidden {position:absolute; left:-9999px; display:none;}
+
+.popup {position:fixed; left:-100vw; top:0; width:100vw; height:100vh; opacity:0; transition: opacity 0.75s, left 0s 0.75s; z-index:1000;}
+label.modal-close {display:block; width:3vw; height:3vw; color:#fff; position:absolute; right:2vw; top:2vw; cursor:pointer;}
+label.modal-close:before {display:block; content:""; width:100%; height:4px; background:#fff; position:absolute; left:0; top:50%; margin-top:-2px; 
+-webkit-transform:rotate(45deg);
+transform:rotate(45deg);
 }
-h2{
-font-family: 'Poppins:wght@300', sans-serif;
+label.modal-close:after {display:block; content:""; width:100%; height:4px; background:#fff; position:absolute; left:0; top:50%; margin-top:-2px; 
+-webkit-transform:rotate(-45deg);
+transform:rotate(-45deg);
 }
-h3{
-font-family: 'Roboto', sans-serif;
+
+.popup img {display:block; height:60vmin; max-height:600px; position:absolute; left:0; top:0; right:0; bottom:0; margin:auto;}
+
+.action-block {display:block; width:40vw; height:8vh; margin:0 auto; cursor:pointer; text-align:center; font-size:2vmin; color:#fff; line-height:8vh;}
+.top-push {background:#e23b2d;}
+.top-slide {background:#8b37aa;}
+.right-push {background:#7cb447;}
+
+.modal-top-push {height:80vh; width:100%; background:#e23b2d; position:fixed; top:-100vh; transition: 1s; z-index:1000;}
+#modal-top-push:checked ~ .modal-top-push {top:0;}
+#modal-top-push:checked ~ .wrapper {
+transform: translateY(50vh);
+-webkit-transform: translateY(50vh);
 }
-p{
-font-family:'Roboto:wght@100', sans-serif;
-font-size: 95%;
+
+.modal-top-slide {height:80vh; width:100%; background:#8b37aa; position:fixed; overflow:hidden; left:0; top:-100vh; transition: 1s; z-index:1000;}
+#modal-top-slide:checked ~ .modal-top-slide {top:0;}
+
+
+.modal-right-push {height:100vh; width:30vw; background:#7cb447; position:fixed; right:-30vw; top:0; transition: 1s; z-index:1000;}
+#modal-right-push:checked ~ .modal-right-push {right:0;}
+#modal-right-push:checked ~ .wrapper {
+transform:translateX(-30vw);
+-webkit-transform: translateX(-30vw);
 }
-.page-wrapper{
-    text-align: center;
-    align-items: center;
-    clear: both;
-}
-#zen-preamble{
-    width: 700px;
-    background: #6DEEF8;
-    align-items: center;
-    justify-content: space-around;
-    padding: 40px 50px;
-}
-#zen-explanation{
-    width: 700px;
-    background: #5FD9C0;
-    align-items: center;
-    justify-content: space-around;
-    padding: 40px 50px;
-    position: absolute;
-    left: 549px;
-}
-#zen-participation{
-    width: 700px;
-    background: #75F0B5;
-    align-items: center;
-    justify-content: space-around;
-    padding: 40px 50px;
-    position: absolute;
-    bottom: -729px;
-}
-#zen-benefits{
-    width: 700px;
-    background: #5FD97C;
-    align-items: center;
-    justify-content: space-around;
-    padding: 40px 50px;
-    position: absolute;
-    bottom: -953px;
-    left: 549px;
-}
-#zen-requirements{
-    width: 700px;
-    background: #76F86D;
-    align-items: center;
-    justify-content: space-around;
-    padding: 40px 50px;
-    position: absolute;
-    bottom: -1458px;
-}
-header{
-    width: 350px;
-    background: #8f8e80;
-    box-shadow: #f5f2d0;
-    align-items: center;
-    padding: 40px 50px;
-    border-radius: 5%;
-}
-#design-selection{
-    float: left;
-    position: absolute;
-    bottom: -1750px;
-    display: block;
-    padding: .5em;
-    border: 1px solid #ba89a8;
-    border-radius: .5em;
-    margin: .25em;
-    width: 80%;
+
+
+@media only screen and (max-width:480px) {
+body {font-size:4vmin;}
+.wrapper p {font-size:3vmin;}
+.action-panel {font-size:3vmin;}
+h5 {font-size:3vmin;}
 }
